RESOLVED FIXED272147
Infinite recursion with pagination and widow breaks
https://bugs.webkit.org/show_bug.cgi?id=272147
Summary Infinite recursion with pagination and widow breaks
Antti Koivisto
Reported 2024-04-04 03:07:30 PDT
crashes
Attachments
Antti Koivisto
Comment 1 2024-04-04 03:07:42 PDT
Antti Koivisto
Comment 2 2024-04-04 08:14:11 PDT
EWS
Comment 3 2024-04-04 12:16:59 PDT
Committed 277072@main (4313af94d494): <https://commits.webkit.org/277072@main> Reviewed commits have been landed. Closing PR #26849 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.