Infinite recursion with pagination and widow breaks https://bugs.webkit.org/show_bug.cgi?id=272147 rdar://125579563

Reviewed by Alan Baradlay.

We are creating completely empty lines which confuses the restart logic.

* LayoutTests/fast/multicol/multicol-restart-empty-lines-crash-expected.txt: Added.
* LayoutTests/fast/multicol/multicol-restart-empty-lines-crash.html: Added.
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::restartForPagination):

If the restart position computes to the first inline item then we will not be making progress and
should not restart.

* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.h:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::adjustContentForPagination):

Canonical link: https://commits.webkit.org/277072@main